<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="341dp"
        android:layout_height="321dp"

        android:layout_marginTop="32dp"

        android:layout_marginBottom="24dp"
        android:background="@drawable/circular_shape"
        android:backgroundTint="@color/tcu"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:scrollbarDefaultDelayBeforeFade="400"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disp_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="182dp"
        android:text="10:00.0"
        android:textSize="65dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/past_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/past_time"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/disp_time"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/present_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alerm_switch"
            app:layout_constraintHorizontal_bias="0.673"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_play" />

        <Switch
            android:id="@+id/alerm_switch"
            android:layout_width="117dp"
            android:layout_height="51dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/aleam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:clickable="false"
            app:backgroundTint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/present_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:text="@string/present_time"
        app:layout_constraintBottom_toTopOf="@+id/ptime_radiobox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/ptime_radiobox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/question_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/P_RadioButtonStyle">

        <RadioButton
            android:id="@+id/ptime10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="radioSetTimeText10"
            android:text="@string/ptime10"
            android:theme="@style/P_RadioButtonStyle" />

        <RadioButton
            android:id="@+id/ptime20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioSetTimeText20"
            android:text="@string/ptime20"
            android:theme="@style/P_RadioButtonStyle" />

        <RadioButton
            android:id="@+id/ptime30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioSetTimeText30"
            android:text="@string/ptime30"
            android:theme="@style/P_RadioButtonStyle" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/question_time"
        app:layout_constraintBottom_toTopOf="@+id/qtime_radiobox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/qtime_radiobox"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Q_RadioButtonStyle">

        <RadioButton
            android:id="@+id/qtime5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:theme="@style/Q_RadioButtonStyle"
            android:text="@string/qtime5" />

        <RadioButton
            android:id="@+id/qtime10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Q_RadioButtonStyle"
            android:text="@string/qtime10" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>